# nxai-integration-sdk

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_all.sh  config_utils.py
message_processing_utils/: __init__.py
message_processing_utils/anpr/: __init__.py
message_processing_utils/anpr/detector/: __init__.py  messages.py
message_processing_utils/anpr/ocr/: __init__.py  messages.py
message_processing_utils/base/: __init__.py  messages.py
message_processing_utils/base/tests/: test_messages.py
message_processing_utils/general/detector/: __init__.py  messages.py
message_processing_utils/general/detector/tests/: test_messages.py
message_processing_utils/general/ocr/: __init__.py  cache.py  config.py  engine.py  messages.py  worker_pool.py
postprocessor-c-example/: CMakeLists.txt  README.md
postprocessor-c-example/src/: main.c
postprocessor-c-image-example/: CMakeLists.txt  README.md
postprocessor-c-image-example/src/: main.c
postprocessor-c-raw-example/: CMakeLists.txt  README.md
postprocessor-c-raw-example/src/: main.c
postprocessor-cloud-inference-example/: CMakeLists.txt  README.md  plugin.cloud-inference.ini.example  postprocessor-cloud-inference-example.py
postprocessor-python-anpr-example/: CMakeLists.txt  README.md  plugin.anpr.ini.example  postprocessor-python-anpr-example.py  requirements.txt  test_postprocessor_python_anpr_example.py
postprocessor-python-clip-example/: CMakeLists.txt  README.md  postprocessor-python-clip-example.py
postprocessor-python-confidences-example/: CMakeLists.txt  README.md  postprocessor-python-confidences-example.py
postprocessor-python-edgeimpulse-example/: CMakeLists.txt  README.md  postprocessor-python-edgeimpulse-example.py
postprocessor-python-events-example/: CMakeLists.txt  README.md  postprocessor-python-events-example.py
postprocessor-python-example/: CMakeLists.txt  README.md  postprocessor-python-example.py
postprocessor-python-image-example/: CMakeLists.txt  README.md  postprocessor-python-image-example.py
postprocessor-python-measure-average-car-speed/: CMakeLists.txt  README.md  postprocessor-python-measure-average-car-speed.py  speed_cache.py  test_postprocessor_python_measure_average_car_speed.py  test_speed_cache.py
postprocessor-python-noresponse-example/: CMakeLists.txt  README.md  postprocessor-python-noresponse-example.py
postprocessor-python-settings-example/: CMakeLists.txt  README.md  postprocessor-python-settings-example.py
postprocessor-python-stitch-ocr-result/: CMakeLists.txt  README.md  plugin.stitch-ocr-result.ini.example  postprocessor-python-stitch-ocr-result.py  test_postprocessor_python_stitch_ocr_result.py
preprocessor-python-clip-example/: CMakeLists.txt  README.md  preprocessor-python-clip-example.py  requirements.txt
preprocessor-python-image-example/: CMakeLists.txt  README.md  preprocessor-python-image-example.py
preprocessor-python-tensor-example/: CMakeLists.txt  README.md  preprocessor-python-tensor-example.py
